# convolution-patterns

./: .gitignore  README.md  launch_host.py  pyproject.toml
configs/: ingest_config.yaml  label_remap.yaml  render_config.yaml  train_config.yaml  transforms_used.yaml
configs/backbones/: EfficientNetB0.yaml  MobileNetV2_Frozen.yaml  MobileNetV3Small_Frozen.yaml  MobileNetV3_DeepClassifier.yaml  MobileNetV3_UnfrozenLN.yaml  ResNet50V2_Unfrozen.yaml
configs/backbones/baseline/: MobileNetV2_Baseline.yaml
dash_apps/: dash_classify_app.py  dash_debug_app.py
docs/: ARCHETECTURE.md  TIERED_WINDOWING.md  chart_classification_tool.md  chart_pattern_process.md  pattern_view_dashboard.md  stage_classified_images_process.md
examples/: AUD_JPY_processed_signals.csv
insights/: 2025-07-25_directional_label_collapse.md  2025-07-xx_directional_label_conflict.md
notebook/notebooks/: class_distribution_analysis.ipynb  pattern_plot_preview.ipynb
scripts/: chart_pattern_processor.py  stage_classified_images.py  update_manifest_paths.py
src/convolution_patterns/: exception.py  host.py
src/convolution_patterns/config/: config.py  model_config.py  transform_config.py
src/convolution_patterns/models/: command_line_args.py  inference_results.py
src/convolution_patterns/pipelines/: inference_pipeline.py  ingestion_pipeline.py  render_image_pipeline.py  train_pipeline.py
src/convolution_patterns/runtime/: command_line.py
src/convolution_patterns/services/: augmentation_service.py  callbacks_service.py  image_dataset_service.py  ingestion_service.py  splitter_service.py  (+3 more)
(+6 files in other folders)
